--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <repositories>
         <repository>
             <id>local</id>
-            <url>file:///C:\Users\Belaquaa\Desktop\repo</url>
+            <url>file://${user.home}/.m2/repository</url>
         </repository>
     </repositories>
 
