--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,21 @@ loan:
   minimalIncome: 40000
   maxAnnualLoanRatio: 0.5
   maxCarLoanRatio: 0.3
+
+spring:
+  -application.name: Project
+  -datasource:
+    -url: jdbc:postgresql://localhost:5432/postgres
+    -username: postgres
+    -password: root
+    -driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: false
+
+income:
+  -client:
+    -enabled: true
+  -url: https://66055cd12ca9478ea1801f2e.mockapi.io/api/users/income
